<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Selenium</groupId>
	<artifactId>Selenium</artifactId>
	<version>1.0</version>
	<name>Selenium</name>
	<description>Selenium WebDriver Test Cases</description>
	<packaging>jar</packaging>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <reporting>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-report-plugin</artifactId>
           <version>3.5.3</version>
           <configuration>
             <aggregate>true</aggregate>
             <outputFormats>
               <outputFormat>XML</outputFormat>
               <outputFormat>HTML</outputFormat>
               <outputFormat>TXT</outputFormat>
             </outputFormats>
           </configuration>
         </plugin>
       </plugins>
    </reporting>
	<build>
		<plugins>
			<plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <version>3.8.1</version>
	            <configuration>
	                <source>11</source>
	                <target>11</target>
	            </configuration>
	        </plugin>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-surefire-plugin</artifactId>
	            <version>3.2.5</version>
	            <configuration>
	                <includes>
	                    <include>**/*Test*.java</include>
	                    <include>**/*Tests*.java</include>
	                </includes>
	            </configuration>
	        </plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-report-plugin</artifactId>
			<version>3.5.3</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.35.0</version>
		</dependency>
		<dependency>
    		<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-firefox-driver</artifactId>
			<version>4.35.0</version> <!-- or latest -->
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.12.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.sikulix</groupId>
			<artifactId>sikulixapi</artifactId>
			<version>2.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>1.12.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
	        <groupId>org.junit.platform</groupId>
	        <artifactId>junit-platform-suite-api</artifactId>
	        <version>1.12.2</version>
	        <scope>test</scope>
	    </dependency>
	    <dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-engine</artifactId>
	        <version>5.12.2</version>
	        <scope>test</scope>
	    </dependency>
	</dependencies>
</project>